# server

./: .gitignore  .ignore  README.md  md.txt
code/code/: CMakeLists.txt
code/code/include/: inc.h
code/code/src/client/: client.cpp
code/code/src/server/: server.cpp
code/code/src/test/: main.cpp  test.hpp
net/: net.h
new_code/code/: CMakeLists.txt
new_code/code/bat/: commit.sh
new_code/code/include/: buildmsg.hpp  inc.h  poll.hpp  reg.hpp  threadpool.hpp
new_code/code/include/proto/: msg.proto
new_code/code/src/client/: client.cpp
new_code/code/src/server/: server.cpp
new_code/code/src/test/: main.cpp
src/: CMakeLists.txt
src/lib/: CMakeLists.txt  Makefile  cmake_install.cmake
src/lib/include/: message.h  socket.h
src/lib/netlib/: CMakeLists.txt  Makefile  cmake_install.cmake  socket.cpp
src/server/: CMakeLists.txt  main.cpp  testserver.hpp
